<resources>

    <!-- common strings -->

    <string name="app_name">String Benchmark</string>
    <string name="application">Application:</string>
    <string name="showInfoAboutTheApp">About this App…</string>
    <string name="aboutThisBuild">About this build</string>
    <string name="versionCode">Version code:</string>
    <string name="versionName">Version name:</string>
    <string name="author">Author:</string>
    <string name="me">Igor Shaula</string>
    <string name="summaryLoadLength">Load length is</string>

    <string name="pressBackAgainToExit">Press Back button again to exit</string>

    <string name="star">*</string>

    <string name="nanos">nano-sec.</string>
    <string name="micros">micro-sec.</string>
    <string name="millis">milli-sec.</string>
    <string name="seconds">sec.</string>

    <!-- preparation of load for iterations -->

    <string name="startingExplanation">
        Load consists of basic string from the 1st field
        repeated as many times as specified in the 2nd field
    </string>

    <string name="testBasisHintEmpty">Test\'s basic string is currently empty</string>
    <string name="testBasisHintBusy">Test\'s basic string length is</string>
    <string name="stringsAmountHintEmpty">Multiplier is 0 -> total load is empty</string>
    <string name="stringsAmountHintBusy">Total load string\'s length is</string>

    <string name="prepareLoadButtonText">Prepare load</string>
    <string name="viewLoadForTests">View load for tests…</string>

    <string name="resultOfPreparation">Time for creating the load:</string>

    <!-- iterations -->

    <string name="iterationsExplanation">
        Load is processed by each variant in every iteration
    </string>

    <string name="iterationsAmountHintEmpty">No test iterations will be done!</string>
    <string name="iterationsAmountHintBusy">Numbers from 100 to 10.000 are usually enough</string>

    <string name="startIterations">Start iterations</string>
    <string name="stopIterations">Stop iterations</string>
    <!--<string name="startAdjustedIterations">Start adjusted iterations</string>-->
    <!--<string name="stopAdjustedIterations">Stop adjusted iterations</string>-->
    <!--<string name="startEndlessIterations">Start endless iterations</string>-->
    <!--<string name="stopEndlessIterations">Stop endless iterations</string>-->

    <string name="resultsForLoggingTests">Median results for logging the load:</string>
    <string name="resultsForLoggingTestsBeginning">\n(the string of</string>
    <string name="resultsForLoggingTestsEnd">symbols total)</string>

    <string name="resultOfSystemOutPrintln">Good old System.out.println(…):</string>
    <string name="resultOfStandardLog">Standard Android Log:</string>
    <string name="resultOfDAL">My double-args Log wrapper:</string>
    <string name="resultOfVAL1">My variable-args Log wrapper 1:</string>
    <string name="resultOfVAL2">My variable-args Log wrapper 2:</string>
    <string name="resultOfVAL3">My variable-args Log wrapper 3:</string>
    <string name="resultOfSLVoid">My superior-void Log wrapper:</string>
    <string name="resultOfSLInt">My superior-int Log wrapper:</string>
    <string name="thisBlocksDivider"/>
    <string name="summaryLoadInfo">Assembled load length is:</string>

    <string name="showPreparationBlock">Show preparation block</string>
    <string name="hidePreparationBlock">Hide preparation block</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="current_iteration_is">Current iteration is:</string>
    <string name="makeLoadEmpty">Make load empty</string>
    <string name="endless_iterations">Endless iterations</string>
    <string name="settingsActivity">SettingsActivity</string>
    <string name="hideExplanations">Hide explanations</string>
    <string name="showExplanations">Show explanations</string>
    <string name="all_settings_amp_options_are_here"><![CDATA[All settings & options are here]]></string>

    <!-- something else - for new automatically created strings -->

</resources>