<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchWrap"
    android:orientation="vertical"
    android:paddingBottom="80dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="64dp"
    tools:context=".app_components.main_screen.MainActivity">

    <TextView
        android:id="@+id/tvStartingExplanation"
        style="@style/MatchWrap"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/startingExplanation"
        android:textColor="@android:color/black"
        android:textStyle="italic"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/darker_gray"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilBasicString"
        style="@style/MatchWrap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedBasicString"
            style="@style/MatchWrap"
            android:gravity="center"
            android:hint="@string/testBasisHintEmpty"
            android:imeOptions="flagForceAscii|flagNoExtractUi|flagNoFullscreen"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilStringsAmount"
        style="@style/MatchWrap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedStringsAmount"
            style="@style/MatchWrap"
            android:gravity="center"
            android:hint="@string/stringsAmountHintEmpty"
            android:imeOptions="flagForceAscii|flagNoExtractUi|flagNoFullscreen"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:gravity="center">

        <Button
            android:id="@+id/bPrepareLoad"
            style="@android:style/Widget.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/prepareLoadButtonText"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"/>

        <View
            android:layout_width="16dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/bResetLoad"
            style="@android:style/Widget.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/makeLoadEmpty"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvResultOfPreparation"
        style="@style/MatchWrap"
        android:text="@string/resultOfPreparation"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvResultForCreatingLoad"
        style="@style/MatchWrap.Gravity_End"
        android:text="@string/star"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        style="@style/WrapWrap"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/star"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone"/>

    <Button
        android:id="@+id/bViewLoad"
        style="@android:style/Widget.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/viewLoadButtonText"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"/>

</LinearLayout>