<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vgIterations"
    style="@style/MatchMatch"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="-16dp"
    android:gravity="bottom"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app_components.main_screen.MainActivity">

    <TextView
        android:id="@+id/tvIterationsResultHeader"
        style="@style/MatchWrap"
        android:gravity="center"
        android:text="@string/resultsForLoggingExplanation"
        android:textColor="@android:color/black"
        android:textStyle="italic"/>

    <View
        android:id="@+id/vIterationsResultHeader"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvIterationResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scrollbarDefaultDelayBeforeFade="500"
        android:scrollbarFadeDuration="1000"
        android:scrollbarSize="4dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:scrollbarTrackVertical="@android:color/black"
        android:scrollbars="vertical"
        android:theme="@style/AppThemeGreenAccent"/>

    <LinearLayout
        style="@style/MatchWrap"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cbEndlessIterations"
            style="@android:style/Widget.DeviceDefault.CompoundButton.Star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endless_iterations"
            android:textColor="@color/colorPrimary"
            android:theme="@style/AppThemeGreenAccent"/>

        <ToggleButton
            android:id="@+id/bToggleAdjustedIterations"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/startIterations"
            android:textOn="@string/stopIterations"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvIterationsExplanation"
        style="@style/MatchWrap"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/iterationsExplanation"
        android:textColor="@android:color/black"
        android:textStyle="italic"/>

    <View
        android:id="@+id/vIterationsExplanation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/darker_gray"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilIterationsAmount"
        style="@style/MatchWrap"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedIterationsAmount"
            style="@style/MatchWrap"
            android:gravity="center"
            android:hint="@string/iterationsAmountHintEmpty"
            android:imeOptions="actionDone|flagForceAscii|flagNoExtractUi|flagNoFullscreen"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvProgressBar"
        style="@style/MatchWrap"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout style="@style/MatchWrap">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/current_iteration_is"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvCurrentIterationNumber"
            style="@style/WrapWrap"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvIterationsTotalNumber"
            style="@style/WrapWrap"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</LinearLayout>